fix(components/atom/label): color contrast for labels in light mode

--- a/components/atom/label/src/styles/index.scss
+++ b/components/atom/label/src/styles/index.scss
@@ -44,9 +44,12 @@ $base-class: '.sui-AtomLabel';
     pointer-events: none;
   }
 
-  @each $type, $color in $c-atom-label-type {
+  @each $type, $color, $optionalColor in $c-atom-label-type {
     &--#{$type} {
       color: $color;
+      #{$base-class}-optionalText {
+        color: $optionalColor;
+      }
     }
   }
 }
